--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,44 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Sentry Config File
+.env.sentry-build-plugin
+
+/src/generated/prisma
+
+
+
+/prisma/migrations/   
+
+
+logs/
+*.log
+
+
+.vscode/
+.idea/
+*.sublime-workspace
+*.sublime-project
+
+
+Thumbs.db
+ehthumbs.db
+
+
+/dist/
+.tmp/
+*.tmp
+
+
+*.key
+*.crt
+
+
+.AppleDouble
+.LSOverride
+
+
+npm-debug.log*
+yarn-error.log*
+pnpm-debug.log*
