--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "@prisma/client": "^6.19.0",
     "@sentry/nextjs": "^10.27.0",
+    "bcryptjs": "^3.0.3",
+    "cookie": "^1.1.1",
+    "jose": "^6.1.2",
     "next": "16.0.5",
     "prisma": "^6.19.0",
     "react": "19.2.0",
