--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcryptjs": "^3.0.3",
     "cookie": "^1.1.1",
     "jose": "^6.1.2",
+    "lucide-react": "^0.555.0",
     "next": "16.0.5",
     "prisma": "^6.19.0",
     "react": "19.2.0",
