--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@prisma/adapter-pg": "^7.1.0",
     "@prisma/client": "^6.19.0",
+    "@prisma/nextjs-monorepo-workaround-plugin": "^7.1.0",
     "@sentry/nextjs": "^10.27.0",
     "bcryptjs": "^3.0.3",
     "cookie": "^1.1.1",
